RIC-538: Doc updates related to settings